--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@ code {
     monospace;
 }
 
-
 .service-selector {
   background: #fff;
   max-width: 500px;
@@ -23,85 +22,16 @@ code {
   border: 2px solid #000;
   text-align: center;
 }
-/* .service-selector input,
-.service-selector button {
-  width: 100%;
-}
-.service-selector input[type="text"],
-.service-selector button[type="text"] {
-  text-align: center;
-  font-size: 3rem;
-}
-*/
-/*
-.course-edit {
-  margin-bottom: 20px;
-  border: 2px solid #000;
-  overflow: hidden;
-  display: -webkit-box;
-  display: flex;
-  flex-wrap: wrap;
-}
-.course-edit input,
-.course-edit textarea
-{
-  width: 33.33%;
-  padding: 10px;
-  line-height: 1;
-  font-size: 1.2rem;
-  border: 0;
-  border-bottom: 1px solid #000;
-  border-right: 1px solid #000;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  border-radius: 0;
-  background: #fff;
-}
-.course-edit input:focus,
-.course-edit textarea:focus {
-  outline: 0;
-  background: #fef2de;
-}
-.course-edit textarea {
-  width: 100%;
-}
-.course-edit input:last-of-type {
-  width: 100%;
-}
-.course-edit button {
-  width: 100%;
-  border: 0;
-}
-*/
 
 .loginForm{
   text-align: center;
+  margin-top:35px;
 }
 
 .registerForm{
   text-align: center;
+  margin-top:35px;
 }
-/*  
-.service{
-  text-align: center;
-}
-
-.courses{
-  float: left;
-  margin-left: 100px;
-}
-
-.orderList{
-  float: right;
-  margin-right: 100px;
-}
-
-.items {
-  margin:0 auto;
-  display: inline-block;
-}
-*/
 
 .menu-course {
   border-bottom: 2px solid #000;
